--- a/contacto.html
+++ b/contacto.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>home</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+        integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -17,8 +19,8 @@
             <a href="index.html">
                 <img src="img/logo-horiz.png" alt="logotype_center" class="logotype"></a>
         </div>
-        <div class="container-breadcrumb">
-            <ul class="breadcrumb">
+        <div class="container-menuHeader">
+            <ul class="menuHeader">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="skincare.html">Skincare</a></li>
                 <li><a href="consejos.html">Consejos</a></li>
@@ -56,9 +58,9 @@
                         nos pondremos en contacto contigo lo antes posible.
                     </p>
                 </div>
-                <div class="text_form">
+                <!-- <div class="text_form">
                     <form action="#" method="#"></form>
-                    <label for="fname">Nombre</label><br>
+                    <label for="name">Nombre</label><br>
                     <input type="text" id="name" name="name" placeholder=""><br><br>
                     <label for="email">Correo electrónico</label><br>
                     <input type="email" id="email" name="email" placeholder=""><br><br>
@@ -69,7 +71,34 @@
                     <label for="fname">Cuéntanos</label><br>
                     <textarea></textarea><br><br>
                     <input type="submit" id="enviar" name="enviar" placeholder="">
+                </div> -->
+                <form>
+                    <div class="form-group">
+                        <label for="name">Nombre</label>
+                        <input type="text" class="form-control" id="name">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Correo electrónico</label>
+                        <input type="email" class="form-control" id="email">
+                    </div>
+                    <div class="form-group">
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+                        <label class="form-check-label" for="exampleRadios1">
+                            Asesoría personalizada </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
+                        <label class="form-check-label" for="exampleRadios2">
+                            Catálogo de Productos </label>
+                    </div>
                 </div>
+                    <div class="form-group">
+                        <label for="exampleFormControlTextarea1">Cuéntanos</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Enviar</button>
+                </form>
             </div>
         </div>
     </section>
@@ -113,6 +142,12 @@
             </ul>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
