--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>home</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+        integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -17,8 +19,8 @@
             <a href="index.html">
                 <img src="img/logo-horiz.png" alt="logotype_center" class="logotype"></a>
         </div>
-        <div class="container-breadcrumb">
-            <ul class="breadcrumb">
+        <div class="container-menuHeader">
+            <ul class="menuHeader">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="skincare.html">Skincare</a></li>
                 <li><a href="consejos.html">Consejos</a></li>
@@ -34,7 +36,7 @@
             <p class="text_slide">Tu piel te da señales<br>
                 para que puedas identificarlo</p>
             <div class="btn_slide">
-                <a href="#">Ver más</a>
+                <a class="btn btn-outline-light" href="#">Ver más</a>
             </div>
         </div>
     </section>
@@ -55,7 +57,7 @@
                 <p class="text_section_skincare">¡Lo antes posible! Entre antes comiences<br>
                     a cuidar tu piel, mejor.</p>
                 <div class="btn_section_skincare">
-                    <a href="#">Ver más</a>
+                    <a class="btn btn-outline-light" href="#">Ver más</a>
                 </div>
             </div>
         </div>
@@ -101,6 +103,12 @@
             </ul>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
