--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="index.html">
                 <img src="img/logo-horiz.png" alt="logotype_center" class="logotype"></a>
         </div>
-        <div class="container-menuHeader">
+       <div class="container-menuHeader">
             <ul class="menuHeader">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="skincare.html">Skincare</a></li>
@@ -43,8 +43,8 @@
     <section id="textoboton">
         <div class="container_text_block">
             <p class="text_block">
-                La rutina coreana consiste en 10 pasos para lograr una piel radiante,<br>
-                pero no es necesario incluir todos los pasos para tener una piel cuidada y sana.<br>
+                La rutina coreana consiste en 10 pasos para lograr una piel radiante,
+                pero no es necesario incluir todos los pasos para tener una piel cuidada y sana. <br>
                 ¿Quieres ver los recomendados para tu tipo de piel?
             </p>
         </div>
