--- a/contacto.html
+++ b/contacto.html
@@ -39,7 +39,7 @@
                 Contamos con asesorías personalizadas donde te ayudaremos a identificar tu tipo de piel y
                 de esta forma utilizar los productos correctos para ella. También te ayudaremos a identificar
                 las problematicas que afectan tu piel y como ayudar a mejorar mediante rutinas y productos especificos,
-                para ello contamos con dermatologos que te evaluaran y recomendaran productos coreanos, los cuales son
+                para ello contamos con dermatólogos que te evaluaran y recomendaran productos coreanos, los cuales son
                 en su
                 mayoría con compuestos de origen natural.<br><br>
                 Finalmente tenemos un catálogo de productos donde podrás comprar productos desde la comodidad de tu
@@ -58,20 +58,6 @@
                         nos pondremos en contacto contigo lo antes posible.
                     </p>
                 </div>
-                <!-- <div class="text_form">
-                    <form action="#" method="#"></form>
-                    <label for="name">Nombre</label><br>
-                    <input type="text" id="name" name="name" placeholder=""><br><br>
-                    <label for="email">Correo electrónico</label><br>
-                    <input type="email" id="email" name="email" placeholder=""><br><br>
-                    <input type="radio" id="selection" name="selection" placeholder="">
-                    <label for="selection">Asesoría personalizada</label><br><br>
-                    <input type="radio" id="selection" name="selection" placeholder="">
-                    <label for="selection">Catálogo de productos</label><br><br>
-                    <label for="fname">Cuéntanos</label><br>
-                    <textarea></textarea><br><br>
-                    <input type="submit" id="enviar" name="enviar" placeholder="">
-                </div> -->
                 <form>
                     <div class="form-group">
                         <label for="name">Nombre</label>
@@ -97,7 +83,7 @@
                         <label for="exampleFormControlTextarea1">Cuéntanos</label>
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                     </div>
-                    <button type="submit" class="btn btn-primary">Enviar</button>
+                    <button type="submit" class="btn btn-primary btnSend">Enviar</button>
                 </form>
             </div>
         </div>
