--- a/nosotros.html
+++ b/nosotros.html
@@ -66,21 +66,22 @@
             <div class="card" style="width:400px">
                 <img class="card-img-top" src="img/img1-asesorias.svg" alt="Card image">
                 <div class="card-body">
-                    <h4 class="card-title">Asesorías personalizadas</h4>
+                    <h4 class="card-title cardTitle">Asesorías personalizadas</h4>
                     <p class="card-text">Te conocemos, vemos tus necesidades y te ayudamos a armar una rutina perfecta
                         para ti.</p>
-                    <a href="#" class="btn_nosotros">Me interesa</a>
+                    <a href="#" class="btn btn-primary btn_nosotros">Me interesa</a>
                 </div>
             </div>
             <div class="card" style="width:400px">
                 <img class="card-img-top" src="img/img1-catalogo.svg" alt="Card image">
                 <div class="card-body">
-                    <h4 class="card-title">Catálogo de productos</h4>
+                    <h4 class="card-title cardTitle">Catálogo de productos</h4>
                     <p class="card-text">Te ofrecemos productos coreanos que cambiaran tu vida y tu piel.</p>
-                    <a href="#" class="btn_nosotros">Me interesa</a>
+                    <a href="#" class="btn btn-primary btn_nosotros">Me interesa</a>
                 </div>
             </div>
-            <!--end-card-->
+        </div>
+        <!--end-card-->
 
     </section>
 
