--- a/contacto.html
+++ b/contacto.html
@@ -31,7 +31,7 @@
     </header>
     <section id="slide-contacto">
     </section>
-    <section id=".text_block_contacto">
+    <section>
         <div class="container_text_block_page_contacto">
             <p class="text_block_contacto">
                 Korean House se especializa en darte herramientas para que puedas cuidar
