Entrega_SEO+SASSII

--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>home</title>
+    <meta name="keywords"
+        content="skincare para principiantes, rutina skincare noche, asia skincare, orden de skincare">
+    <title>Home Korean House Skincare</title>
+    <meta name="description"
+        content="Korean House se especializa en el cuidado de la piel con productos de origen coreano, la cosmética coreana en funcion de una piel sana y radiante">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="scss/global.css">
+
 
 </head>
 
@@ -19,7 +26,7 @@
             <a href="index.html">
                 <img src="img/logo-horiz.png" alt="logotype_center" class="logotype"></a>
         </div>
-       <div class="container-menuHeader">
+        <div class="container-menuHeader">
             <ul class="menuHeader">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="skincare.html">Skincare</a></li>
@@ -38,7 +45,7 @@
         </div>
     </section>
     <section id="textoboton">
-        <div class="container_text_block">
+        <div class="container_text container_text_block container_text_block_white">
             <p class="text_block">
                 La rutina coreana consiste en 10 pasos para lograr una piel radiante,
                 pero no es necesario incluir todos los pasos para tener una piel cuidada y sana. <br>
@@ -84,17 +91,18 @@
             <ul class="list_footer">
                 <li class="element_list_footer">
                     <a href="#">
-                        <img class="icons_footer" src="img/ig.png" alt="instagram">
+                        <!-- <img class="icons_footer" src="img/ig.png" alt="instagram"> -->
+                        <i class="bi bi-youtube icons_footer_youtube"></i>
                     </a>
                 </li>
                 <li class="element_list_footer">
                     <a href="#">
-                        <img class="icons_footer" src="img/fbk.png" alt="facebook">
+                        <i class="bi bi-facebook icons_footer_facebook"></i>
                     </a>
                 </li>
                 <li class="element_list_footer">
                     <a href="#">
-                        <img class="icons_footer" src="img/tw.png" alt="twitter">
+                        <i class="bi bi-twitter icons_footer_twitter"></i>
                     </a>
                 </li>
             </ul>
