--- a/nosotros.html
+++ b/nosotros.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>home</title>
+    <meta name="keywords" content="skincare para principiantes, rutina skincare noche, asia skincare, orden de skincare">
+    <title>Nosotros Korean House Skincare</title>
+    <meta name="description" content="Korean House se especializa en darte herramientas para que puedas cuidar
+    tu piel de la mejor manera y asi conseguir una piel sana y radiante sin maquillaje.">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -33,7 +36,7 @@
     </section>
     <section id=".text_block_contacto">
         <div class="container_text_block_page_nosotros">
-            <p class="text_block_contacto">
+            <p class="text_block_nosotros">
                 Korean House se especializa en darte herramientas para que puedas cuidar
                 tu piel de la mejor manera y asi conseguir una piel sana y radiante sin maquillaje. <br><br>
                 Contamos con asesorías personalizadas donde te ayudaremos a identificar tu tipo de piel y
