--- a/contacto.html
+++ b/contacto.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>home</title>
+    <meta name="keywords" content="skincare para principiantes, rutina skincare noche, asia skincare, orden de skincare">
+    <title>Contacto Korean House Skincare</title>
+    <meta name="description" content="Contáctanos para asesorías personalizadas y solicitar el catálogo de productos traidos directamente desde Corea">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -32,7 +34,7 @@
     <section id="slide-contacto">
     </section>
     <section>
-        <div class="container_text_block_page_contacto">
+        <div class="container_text container_text_block_page_contacto">
             <p class="text_block_contacto">
                 Korean House se especializa en darte herramientas para que puedas cuidar
                 tu piel de la mejor manera y asi conseguir una piel sana y radiante sin maquillaje. <br><br>
