--- a/skincare.html
+++ b/skincare.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>home</title>
+    <meta name="keywords" content="skincare para principiantes, rutina skincare noche, asia skincare, orden de skincare">
+    <title>Skincare Korean House Skincare</title>
+    <meta name="description" content="La filosofía coreana del skincare se trata de trabajar con el ecosistema natural de la piel limpiándola, hidratándola, nutriéndola y protegiéndola, permitiendo que prospere.">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
