avance 3ra entrega final

--- a/nosotros.html
+++ b/nosotros.html
@@ -5,14 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="keywords" content="skincare para principiantes, rutina skincare noche, asia skincare, orden de skincare">
+    <meta name="keywords"
+        content="skincare para principiantes, rutina skincare noche, asia skincare, orden de skincare">
     <title>Nosotros Korean House Skincare</title>
     <meta name="description" content="Korean House se especializa en darte herramientas para que puedas cuidar
     tu piel de la mejor manera y asi conseguir una piel sana y radiante sin maquillaje.">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="scss/global.css">
 
 </head>
 
@@ -111,17 +114,17 @@
             <ul class="list_footer">
                 <li class="element_list_footer">
                     <a href="#">
-                        <img class="icons_footer" src="img/ig.png" alt="instagram">
+                        <i class="bi bi-youtube icons_footer_youtube"></i>
                     </a>
                 </li>
                 <li class="element_list_footer">
                     <a href="#">
-                        <img class="icons_footer" src="img/fbk.png" alt="facebook">
+                        <i class="bi bi-facebook icons_footer_facebook"></i>
                     </a>
                 </li>
                 <li class="element_list_footer">
                     <a href="#">
-                        <img class="icons_footer" src="img/tw.png" alt="twitter">
+                        <i class="bi bi-twitter icons_footer_twitter"></i>
                     </a>
                 </li>
             </ul>
