--- a/contacto.html
+++ b/contacto.html
@@ -5,14 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="keywords" content="skincare para principiantes, rutina skincare noche, asia skincare, orden de skincare">
+    <meta name="keywords"
+        content="skincare para principiantes, rutina skincare noche, asia skincare, orden de skincare">
     <title>Contacto Korean House Skincare</title>
-    <meta name="description" content="Contáctanos para asesorías personalizadas y solicitar el catálogo de productos traidos directamente desde Corea">
+    <meta name="description"
+        content="Contáctanos para asesorías personalizadas y solicitar el catálogo de productos traidos directamente desde Corea">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="scss/contacto.css">
+    <link rel="stylesheet" href="scss/global.css">
+
 </head>
 
 <body class="grid">
@@ -70,17 +75,19 @@
                         <input type="email" class="form-control" id="email">
                     </div>
                     <div class="form-group">
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
-                        <label class="form-check-label" for="exampleRadios1">
-                            Asesoría personalizada </label>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1"
+                                value="option1" checked>
+                            <label class="form-check-label" for="exampleRadios1">
+                                Asesoría personalizada </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2"
+                                value="option2">
+                            <label class="form-check-label" for="exampleRadios2">
+                                Catálogo de Productos </label>
+                        </div>
                     </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
-                        <label class="form-check-label" for="exampleRadios2">
-                            Catálogo de Productos </label>
-                    </div>
-                </div>
                     <div class="form-group">
                         <label for="exampleFormControlTextarea1">Cuéntanos</label>
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
@@ -114,17 +121,17 @@
             <ul class="list_footer">
                 <li class="element_list_footer">
                     <a href="#">
-                        <img class="icons_footer" src="img/ig.png" alt="instagram">
+                        <i class="bi bi-youtube icons_footer_youtube"></i>
                     </a>
                 </li>
                 <li class="element_list_footer">
                     <a href="#">
-                        <img class="icons_footer" src="img/fbk.png" alt="facebook">
+                        <i class="bi bi-facebook icons_footer_facebook"></i>
                     </a>
                 </li>
                 <li class="element_list_footer">
                     <a href="#">
-                        <img class="icons_footer" src="img/tw.png" alt="twitter">
+                        <i class="bi bi-twitter icons_footer_twitter"></i>
                     </a>
                 </li>
             </ul>
